--- a/About Me/AboutMe-Web.html
+++ b/About Me/AboutMe-Web.html
@@ -36,8 +36,14 @@
                 top:30%;
                 left:80%;
             }
-            body {
-                font-family: 'Brush Script MT', cursive;
+
+            .fs {
+                border-color:blueviolet;
+                border-style:dashed;
+                border-radius:40px;
+                border-width:5px;
+                border: spacing 20%;
+
             }
         </style>
     </head>
@@ -47,18 +53,20 @@
         <center>
             <h1 style="font-size:100px">
                 <strong>
-                    <font color="ffff00">
-                        Introduction to myself
+                    <font color="334433">
+                        Title
                     </font>
                 </strong>
             </h1>
         </center>
 
-        <h1 style="font-size:40px" class="templeft">
-            Name: Tran Ba Quan
-            <br/> <br/>
-            Birthday: 21 <sup>st</sup> July 2008
+        <h1 style="font-size:40px" class="fs templeft">
             <br/>
+            abcdefgh
+            <br/> <br/>
+            something
+            <br/>
+
         </h1>
     </div>
 
