--- a/KK/Gokisoft 1989/Airplane Comparison.html
+++ b/KK/Gokisoft 1989/Airplane Comparison.html
@@ -8,13 +8,13 @@
         <style>
             .center {
                 text-align: center;
+                border-spacing: 2px;
             }
         </style>
     </head>
-    
     <body>
-        <p class="center">Airplane Comparison</p>
         <table border="1" class="center">
+            <caption>Airplane Comparison</caption>
             <tr>
                 <td rowspan="2"></td>
                 <td rowspan="2"><strong>Laserjet 45 Super</strong></td>
